--- a/Healthy Eating/Resources/layout/AddNewUserForm.axml
+++ b/Healthy Eating/Resources/layout/AddNewUserForm.axml
@@ -7,12 +7,14 @@
         android:inputType="textPersonName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/UserName" />
+        android:id="@+id/UserName"
+        android:hint="Enter your name" />
     <EditText
         android:inputType="numberDecimal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/UserAge" />
+        android:id="@+id/UserAge"
+        android:hint="Enter your age" />
     <ToggleButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
