--- a/Healthy Eating/Resources/layout/SetParametresForm.axml
+++ b/Healthy Eating/Resources/layout/SetParametresForm.axml
@@ -7,10 +7,12 @@
         android:inputType="numberDecimal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Enter your weight"
         android:id="@+id/WeightEdit" />
     <EditText
         android:inputType="numberDecimal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:hint="Enter your height"
         android:id="@+id/HeightEdit" />
 </LinearLayout>
