--- a/Healthy Eating/Resources/layout/message_Info.axml
+++ b/Healthy Eating/Resources/layout/message_Info.axml
@@ -14,8 +14,7 @@
         android:layout_marginLeft="3.0dp"
         android:layout_marginRight="3.0dp"
         android:layout_marginTop="3.0dp"
-        android:layout_marginEnd="100.0dp"
-        android:background="@drawable/info_border">
+        android:layout_marginEnd="100.0dp">
         <ImageView
             android:id="@+id/imageView1"
             android:background="@drawable/info"
@@ -27,7 +26,7 @@
             android:id="@+id/text"
             android:layout_width="171.5dp"
             android:layout_height="59.5dp"
-            android:textColor="@android:color/holo_red_dark"
+            android:textColor="@android:color/holo_blue_dark"
             android:textSize="15dp"
             android:gravity="center" />
     </LinearLayout>
